basic ui front page

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,9 +1,45 @@
 @import "../styles/variables.scss";
+.main {
+  position: static;
+  overflow-y: scroll;
+  padding: var(--page-shell-padding);
+  transition: all 0.5s ease;
+  width: 100%;
+  @media (min-width: $desktop) {
+    height: 100vh;
+  }
+}
+.sidebar {
+  overflow-y: scroll;
+  background-color: var(--gray);
+  @media (min-width: $desktop) {
+    min-width: var(--sidebar);
+    width: var(--sidebar);
+    max-width: var(--sidebar);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+}
+.filterContainer {
+  padding: 0 var(--page-shell-padding) var(--page-shell-padding);
+  color: var(--text);
+  background-color: black;
+  display: none;
+  @media (min-width: $desktop) {
+    display: block;
+    --background: var(--gray);
+    --text: white;
+    position: static;
+    transform: translateX(0);
+  }
+}
 
 .container {
   font-family: $graphik;
   max-width: 42rem;
   font-size: 16px;
+  color: white;
   padding: var(--page-shell-padding) var(--page-shell-padding) 48px
     var(--page-shell-padding);
   line-height: 1.5;
