--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,9 @@
   font-stretch: normal;
 }
 
-body,
+body {
+  color: 222222c;
+}
 button {
   -webkit-font-smoothing: antialiased;
   font-family: "graphik web", sans-serif;
