--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -3,8 +3,8 @@
 .container {
   padding: var(--page-shell-padding);
   font-family: $pitch;
-  color: var(--text);
-  background-color: var(--background);
+  color: black;
+  background-color: black;
   a:focus,
   button:focus {
     outline: none;
@@ -21,12 +21,13 @@
 
 .logo {
   display: block;
-  width: 150px;
+  width: 250px;
   fill: var(--text);
 }
 
 .links {
   padding-top: 24px;
+  padding-left: 65px;
 }
 
 .link {
@@ -44,7 +45,7 @@
   cursor: pointer;
   font-family: $pitch;
   &:hover {
-    text-decoration: underline;
+    color: #3686f7;
   }
 }
 
