--- a/src/components/profile/profile.module.scss
+++ b/src/components/profile/profile.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/variables.scss";
 
 .profile {
+  background-color: #222222;
   display: grid;
   grid-template-columns: 64px repeat(3, 1fr);
   grid-gap: 0rem 1rem;
@@ -18,6 +19,7 @@
   a {
     &:hover {
       text-decoration: underline;
+      color: white;
     }
     &:focus {
       color: white;
@@ -64,25 +66,26 @@
 }
 
 .name {
-  white-space: nowrap;
+  // white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  margin: 0;
+  margin: 10px;
   font-weight: 500;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   align-self: center;
-  font-size: 18px;
+  font-size: 24px;
   padding: 16px 0 16px;
-  color: var(--profile-theme-color);
+  color: #f4d249;
   @media (min-width: $desktop) {
     padding: 16px 0 12px;
     align-self: unset;
-    font-size: 16px;
+    font-size: 24px;
   }
 }
 
 .url {
+  margin: 10px;
   text-decoration: none;
   padding-top: 0;
   margin-top: 8px;
@@ -90,13 +93,18 @@
 }
 
 .location {
+  margin: 10px;
   padding-top: 16px;
   @media (min-width: $desktop) {
     padding-top: 0;
+    color: white;
   }
 }
 
-.url,
+.url {
+  display: none;
+}
+
 .location {
   grid-column: 1 / 5;
   display: inline-grid;
@@ -111,8 +119,9 @@
 .description {
   margin: 0;
   grid-column: 1 / 5;
-  padding-bottom: 16px;
+  padding: 16px;
   line-height: 1.45;
+  color: white;
 
   a {
     text-decoration: none;
