--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   padding: var(--page-shell-padding);
+
   font-family: $pitch;
   color: black;
   background-color: black;
@@ -21,7 +22,9 @@
 
 .logo {
   display: block;
-  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
   fill: var(--text);
 }
 
@@ -36,7 +39,7 @@
   font-size: 15px;
   text-decoration: none;
   font-weight: 500;
-  color: var(--text);
+  color: white;
   position: relative;
   margin-right: 20px;
   background-color: transparent;
