--- a/src/components/profile/profile.module.scss
+++ b/src/components/profile/profile.module.scss
@@ -13,17 +13,17 @@
   contain-intrinsic-size: 500px;
 
   svg {
-    color: var(--profile-theme-color);
+    color: #3686f7;
   }
 
   a {
     &:hover {
       text-decoration: underline;
-      color: white;
+      color: #3686f7;
     }
     &:focus {
       color: white;
-      background-color: var(--profile-theme-color);
+      background-color: white;
       outline: none;
       border-radius: 1px;
       box-shadow: var(--profile-theme-color) 0px 0px 0px 1px;
@@ -104,7 +104,7 @@
 .url {
   display: none;
 }
-
+//location text
 .location {
   grid-column: 1 / 5;
   display: inline-grid;
@@ -125,7 +125,7 @@
 
   a {
     text-decoration: none;
-    color: var(--profile-theme-color);
+    color: white;
   }
 }
 
