--- a/src/components/filter-item/index.module.scss
+++ b/src/components/filter-item/index.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .main {
-  font-family: $pitch;
+  font-family: "Space Mono", monospace;
   font-weight: 600;
   text-transform: uppercase;
   user-select: none;
