fixed nav bar and the donate box
missing buttons' styles

--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -1,8 +1,10 @@
 @import "../../styles/variables.scss";
 
 .container {
+  display: inline-block;
+  width: 20em;
+  height: 100%;
   padding: var(--page-shell-padding);
-
   font-family: $pitch;
   color: black;
   background-color: black;
