--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -3,16 +3,20 @@
 
 .container {
   font-family: $graphik;
+  display: inline-block;
+  vertical-align: top;
   max-width: 50rem;
   font-size: 16px;
-  padding: var(--page-shell-padding) var(--page-shell-padding) 48px
-    var(--page-shell-padding);
+  // padding: var(--page-shell-padding) var(--page-shell-padding) 48px
+  //   var(--page-shell-padding);
   line-height: 1.5;
-  margin: auto;
+  margin-left: 10%;
+  margin-right: 5%;
   @media (min-width: $desktop) {
     font-size: 18px;
     padding: var(--page-shell-padding) var(--page-shell-padding) 64px
       var(--page-shell-padding);
+    // margin-left: var(--background);
   }
 
   p {
@@ -56,11 +60,10 @@
   font-size: 30px;
   font-family: "Sifonn Basic 2";
   font-weight: 400;
-  position: relative;
+  // position: relative;
   color: white;
-  padding-top: 12px;
-  padding-bottom: 8px;
-
+  // margin-top: 12px;
+  // padding-bottom: 8px;
   @media (min-width: $desktop) {
     padding-top: 24px;
   }
@@ -73,7 +76,7 @@
   font-weight: 400;
   position: relative;
   color: white;
-  padding-top: 12px;
+  // padding-top: 12px;
   padding-bottom: 8px;
 
   @media (min-width: $desktop) {
@@ -369,13 +372,16 @@
   // background-color: #1e1e1e;
   // --background: #1e1e1e;
   --text: white;
-  display: block;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  // display: block;
+  // align-items: center;
+  // justify-content: center;
+  // flex-direction: column;
+  // background-color: #1e1e1e;
   // text-decoration: none;
   // padding-top: 8px;
-  padding: 50px;
+  // margin-left: 5px;
+  // padding-right: 5px;
+  // padding-bottom: 5px;
   // padding-right: 12px;
   // margin: auto;
 
