--- a/src/components/profile/profile.module.scss
+++ b/src/components/profile/profile.module.scss
@@ -13,17 +13,17 @@
   contain-intrinsic-size: 500px;
 
   svg {
-    color: #3686f7;
+    color: #f4d249;
   }
 
   a {
     &:hover {
       text-decoration: underline;
-      color: #3686f7;
+      color: #bf5af2;
     }
     &:focus {
-      color: white;
-      background-color: white;
+      color: #3686f7;
+      background-color: #3686f7;
       outline: none;
       border-radius: 1px;
       box-shadow: var(--profile-theme-color) 0px 0px 0px 1px;
@@ -74,6 +74,8 @@
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   align-self: center;
+  font-family: "Sifonn Basic 2";
+  text-transform: uppercase;
   font-size: 24px;
   padding: 16px 0 16px;
   color: #f4d249;
@@ -109,6 +111,8 @@
   grid-column: 1 / 5;
   display: inline-grid;
   grid-template-columns: 14px auto 1fr;
+  font-family: "Space Mono";
+  text-transform: uppercase;
   grid-gap: 8px;
   overflow: none;
   a {
@@ -122,10 +126,11 @@
   padding: 16px;
   line-height: 1.45;
   color: white;
+  font-family: "Space Mono";
 
   a {
     text-decoration: none;
-    color: white;
+    color: #3686f7;
   }
 }
 
