--- a/src/components/button/index.module.scss
+++ b/src/components/button/index.module.scss
@@ -7,7 +7,7 @@
   display: inline-block;
   vertical-align: middle;
   white-space: nowrap;
-  font-family: $pitch;
+  font-family: "Space Mono", monospace;
   text-transform: uppercase;
   text-decoration: none;
   margin: 0;
