--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -3,7 +3,7 @@
 .container {
   display: inline-block;
   width: 20em;
-  height: 100%;
+  height: 380vh;
   padding: var(--page-shell-padding);
   font-family: $pitch;
   color: black;
