add more keywords

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -17,6 +17,7 @@
     font-size: 18px;
     padding: var(--page-shell-padding) var(--page-shell-padding) 64px
       var(--page-shell-padding);
+      position: inherit;
     // margin-left: var(--background);
   }
 
