--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -21,14 +21,17 @@
   }
   @media (min-width: 320px) and (max-width: 480px) {
     position: inherit;
+    display: none;
   }
-  @media (min-width: 768px) and (max-width: 1024px) {
-    position: inherit;
-  }
+  // @media (min-width: 768px) and (max-width: 1024px) {
+  //   position: inherit;
+  //   display: none;
+  // }
 
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    position: inherit;
-  }
+  // @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  //   position: inherit;
+  //   display: none;
+  // }
 
   p {
     color: white;
@@ -65,6 +68,13 @@
     font-size: revert;
     color: white;
   }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    font-size: revert;
+    color: white;
+  }
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    font-size: revert;
+    color: white;
 }
 .h1:not(:first-of-type) {
   margin-top: 48px;
