--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -22,13 +22,13 @@
   @media (min-width: 320px) and (max-width: 480px) {
     position: inherit;
   }
-  @media (min-width: 768px) and (max-width: 1024px) {
-    position: inherit;
-  }
+  // @media (min-width: 768px) and (max-width: 1024px) {
+  //   position: inherit;
+  // }
 
-  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    position: inherit;
-  }
+  // @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  //   position: inherit;
+  // }
 
   p {
     color: white;
