--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -21,7 +21,7 @@
     position: absolute;
     display: inline-block;
   }
-  @media (min-width: 320px) and (max-width: 1024px) {
+  @media screen and (min-width: 320px) and (max-width: 1024px) {
     position: inherit;
   }
   // @media (min-width: 768px) and (max-width: 1024px) {
