--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -10,8 +10,8 @@
   // padding: var(--page-shell-padding) var(--page-shell-padding) 48px
   //   var(--page-shell-padding);
   line-height: 1.5;
-  margin-left: 10%;
-  margin-right: 5%;
+  // margin-left: 10%;
+  margin: 5%;
   position: absolute;
   @media (min-width: $desktop) {
     font-size: 18px;
